--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             <h2>Download Dec</h2>
             <p>Choose your version:</p>
             <div class="download-buttons">
-                <a href="#" onclick="button5()">
-                    <img class="download-button" width="150" height="80" src="img/button/portable.PNG" alt="Dec (Portable)">
-                    <br>
-                    <span>Dec (Portable)</span>
-                </a>
-                <br>
-                <a href="#" onclick="installer()">
-                    <img class="download-button" width="150" height="80" src="img/button/installer.PNG" alt="Dec (Installer)">
-                    <br>
-                    <span>Dec (Installer)</span>
-                </a>
+                <table border="1">
+                    <tr>
+                        <td>Dec (Portable)</td>
+                        <td><img class="download-button" width="150" height="80" src="img/button/portable.PNG" alt="Dec (Portable)"></td>
+                    </tr>
+                    <tr>
+                        <td>Dec (Installer)</td>
+                        <td><img class="download-button" width="150" height="80" src="img/button/installer.PNG" alt="Dec (Installer)">
+                            </td>
+                    </tr>
+                </table>
             </div>
         </section>
     </main>
