index.htmlの変更:CSS再設定

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
                 <table border="1">
                     <tr>
                         <td>Dec (Portable)</td>
-                        <td><img class="download-button" width="150" height="80" src="img/button/portable.PNG" alt="Dec (Portable)"></td>
+                        <td><img class="twitter_button" width="150" height="80" src="img/button/portable.PNG" alt="Dec (Portable)"></td>
                     </tr>
                     <tr>
                         <td>Dec (Installer)</td>
-                        <td><img class="download-button" width="150" height="80" src="img/button/installer.PNG" alt="Dec (Installer)">
+                        <td><img class="twitter_button" width="150" height="80" src="img/button/installer.PNG" alt="Dec (Installer)">
                             </td>
                     </tr>
                 </table>
