--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <section>
             <h2>Download Dec</h2>
-            <p>Choose your version:</p>
+            <p>Current Latest Version:2.9</p>
             <div class="download-buttons">
                 <table border="1">
                     <tr>
