--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="img/favicon.ico">
 </head>
 <body link="#110000" oncontextmenu="return false;" vlink="#770000" alink="#330000">
-    
+<center>  
     <header>
         <h1>Welcome to TKOGA Software Center</h1>
         <p>Software to encrypt/decrypt your important files</p>
@@ -35,5 +35,6 @@
         <p>&copy; Tomoya Koga</p>
     </footer>
     <script src="script/script.js?20230914" charset="UTF-8"></script>
+</center>
 </body>
 </html>
