index.htmlの変更:onclick再設定

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             <div class="download-buttons">
                 <table border="1">
                     <tr>
-                        <td><img class="twitter_button" width="150" height="80" src="img/button/portable.PNG" alt="Dec (Portable)"></td>
+                        <td><img onclick="button5()" class="twitter_button" width="150" height="80" src="img/button/portable.PNG" alt="Dec (Portable)"></td>
                     </tr>
                     <tr>
                         
-                        <td><img class="twitter_button" width="150" height="80" src="img/button/installer.PNG" alt="Dec (Installer)">
+                        <td><img onclick="installer()" class="twitter_button" width="150" height="80" src="img/button/installer.PNG" alt="Dec (Installer)">
                             </td>
                     </tr>
                 </table>
