フッターにリンクを追加

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
         </section>
     </main>
     <footer>
-        <p>&copy; Tomoya Koga</p>
-    </footer>
+        <a href="https://innovationcraft.booth.pm/">
+            <p>&copy; Tomoya Koga</p>
+        </a>
+        </footer>
     <script src="script/script.js?20230914" charset="UTF-8"></script>
 </center>
 </body>
