新たにリンクを追加

--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
                 </table>
             </div>
         </section>
+        <a href="https://innovationcraft.booth.pm/">公式BOOTHショップ</a>
     </main>
     <footer>
-        <a href="https://innovationcraft.booth.pm/">
-            <p>&copy; Tomoya Koga</p>
-        </a>
-        </footer>
+        <p>&copy; Tomoya Koga</p>        
+    </footer>
     <script src="script/script.js?20230914" charset="UTF-8"></script>
 </center>
 </body>
