Twitterアカウントへのリンクを追加

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="https://innovationcraft.booth.pm/">公式BOOTHショップ</a>
     </main>
     <footer>
-        <p>&copy; Tomoya Koga</p>        
+        <p><a href="https://twitter.com/88nNB3pCQ28919">&copy; Tomoya Koga</a></p>        
     </footer>
     <script src="script/script.js?20230914" charset="UTF-8"></script>
 </center>
